tests/compiler/invalidNumber0/index.ts
3e-
//~^ ERROR: Digit expected.